--- a/src/html/pages/tarifs-inner.html
+++ b/src/html/pages/tarifs-inner.html
@@ -39,7 +39,7 @@
 				<a class="swiper-slide" href="./index.html">Главная</a>
 				<a class="swiper-slide" href="./servises.html">Услуги</a>
 				<a class="swiper-slide" href="#">Условия</a>
-				<a class="swiper-slide" href="#">Интернет магазины</a>
+				<a class="swiper-slide" href="./shop.html">Интернет магазины</a>
 				<a class="swiper-slide" href="#">FAQ</a>
 				<a class="swiper-slide" href="#">Сотрудники</a>
 			</div>
