--- a/about.html
+++ b/about.html
@@ -1,10 +1,9 @@
 <!doctype html>
 <html lang="en">
-
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width,initial-scale=1">
+		<head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -31,8 +30,7 @@
 
 	<link rel="stylesheet" href="./css/main.min.css">
 </head>
-
-	<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="display:none"><symbol id="accordeon" viewBox="0 0 18 10">
+ <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="display:none"><symbol id="accordeon" viewBox="0 0 18 10">
 <path clip-rule="evenodd" d="M0.96967 0.46967C1.26256 0.176777 1.73744 0.176777 2.03033 0.46967L9 7.43934L15.9697 0.46967C16.2626 0.176777 16.7374 0.176777 17.0303 0.46967C17.3232 0.762563 17.3232 1.23744 17.0303 1.53033L9.53033 9.03033C9.23744 9.32322 8.76256 9.32322 8.46967 9.03033L0.96967 1.53033C0.676777 1.23744 0.676777 0.762563 0.96967 0.46967Z"/>
 </symbol><symbol id="arrow-left" viewBox="0 0 24 20"><g fill="none">
 <path fill-rule="evenodd" clip-rule="evenodd" d="M1.49012e-08 10C1.49012e-08 9.44771 0.447715 9 1 9H23C23.5523 9 24 9.44771 24 10C24 10.5523 23.5523 11 23 11H1C0.447715 11 1.49012e-08 10.5523 1.49012e-08 10Z" fill="black"/>
@@ -51,138 +49,128 @@
 <path fill-rule="evenodd" clip-rule="evenodd" d="M16.0566 8.00166C16.3664 8.32634 16.3543 8.84064 16.0296 9.15039L10.0679 14.8379C9.75376 15.1376 9.25955 15.1373 8.94569 14.8374L5.96991 11.9937C5.64549 11.6836 5.63382 11.1693 5.94384 10.8449C6.25387 10.5205 6.76818 10.5088 7.0926 10.8188L9.50751 13.1266L14.9079 7.97462C15.2326 7.66487 15.7469 7.67698 16.0566 8.00166Z" fill="#3DC03C"/>
 <path fill-rule="evenodd" clip-rule="evenodd" d="M11 2.0625C6.06395 2.0625 2.0625 6.06395 2.0625 11C2.0625 15.936 6.06395 19.9375 11 19.9375C15.936 19.9375 19.9375 15.936 19.9375 11C19.9375 6.06395 15.936 2.0625 11 2.0625ZM0.4375 11C0.4375 5.16649 5.16649 0.4375 11 0.4375C16.8335 0.4375 21.5625 5.16649 21.5625 11C21.5625 16.8335 16.8335 21.5625 11 21.5625C5.16649 21.5625 0.4375 16.8335 0.4375 11Z" fill="#3DC03C"/>
 </g></symbol></svg>
-</head>
+	</head>
 
-<body>
-	<div class="container">
-		<header>
-			<nav class="about-nav">
-
-				<button id="go-back" class="nav-back">
-					<svg width="24" height="20">
-						<use xlink:href="#arrow-left"></use>
-					</svg>
-				</button>
-
-
-				<div class="nav__links">
-					<a href="tel:+998555031199" class="nav__phone">
-						<svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-							<path d="M12.5559 10.906L12.1009 11.359C12.1009 11.359 11.0179 12.435 8.06288 9.49698C5.10788 6.55898 6.19088 5.48298 6.19088 5.48298L6.47688 5.19698C7.18388 4.49498 7.25088 3.36698 6.63388 2.54298L5.37388 0.859979C4.60988 -0.160021 3.13488 -0.29502 2.25988 0.57498L0.68988 2.13498C0.25688 2.56698 -0.0331206 3.12498 0.00187944 3.74498C0.0918794 5.33198 0.809879 8.74498 4.81388 12.727C9.06088 16.949 13.0459 17.117 14.6749 16.965C15.1909 16.917 15.6389 16.655 15.9999 16.295L17.4199 14.883C18.3799 13.93 18.1099 12.295 16.8819 11.628L14.9719 10.589C14.1659 10.152 13.1859 10.28 12.5559 10.906Z" fill="#3B88FB"/>
+	<body>
+		<div class="container">
+			<header>
+				<nav class="about-nav">
+					<button id="go-back" class="nav-back">
+						<svg width="24" height="20">
+							<use xlink:href="#arrow-left"></use>
 						</svg>
-					</a>
+					</button>
 
-					<a href="#" class="nav__bot">@yumecs</a>
+					<div class="nav__links">
+						<a href="tel:+998555031199" class="nav__phone">
+							<svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M12.5559 10.906L12.1009 11.359C12.1009 11.359 11.0179 12.435 8.06288 9.49698C5.10788 6.55898 6.19088 5.48298 6.19088 5.48298L6.47688 5.19698C7.18388 4.49498 7.25088 3.36698 6.63388 2.54298L5.37388 0.859979C4.60988 -0.160021 3.13488 -0.29502 2.25988 0.57498L0.68988 2.13498C0.25688 2.56698 -0.0331206 3.12498 0.00187944 3.74498C0.0918794 5.33198 0.809879 8.74498 4.81388 12.727C9.06088 16.949 13.0459 17.117 14.6749 16.965C15.1909 16.917 15.6389 16.655 15.9999 16.295L17.4199 14.883C18.3799 13.93 18.1099 12.295 16.8819 11.628L14.9719 10.589C14.1659 10.152 13.1859 10.28 12.5559 10.906Z" fill="#3B88FB"/>
+							</svg>
+						</a>
+
+						<a href="#" class="nav__bot">@yumecs</a>
+					</div>
+				</nav>
+			</header>
+		</div>
+
+		<div class="links-container swiper-container">
+			<div class="page-links swiper-wrapper">
+				<a class="swiper-slide active" href="./about.html">О нас</a>
+				<a class="swiper-slide" href="./index.html">Главная</a>
+				<a class="swiper-slide" href="./servises.html">Услуги</a>
+				<a class="swiper-slide" href="./tarifs.html">Тарифы</a>
+				<a class="swiper-slide" href="#">Условия</a>
+				<a class="swiper-slide" href="./shop.html">Интернет магазины</a>
+				<a class="swiper-slide" href="#">FAQ</a>
+				<a class="swiper-slide" href="#">Сотрудники</a>
+			</div>
+		</div>
+
+		<div class="container">
+			<div class="about-image">
+				<picture>
+					<source srcset="./images/advert2.avif">
+					<img src="./images/advert2.jpg" alt="О нас" width="400" height="318">
+				</picture>
+			</div>
+
+			<section class="about">
+				<h1>О компании</h1>
+
+				<p>
+					<span>YUMECS —</span> доставка посылок грузов и интернет заказов легко и удобно. Услуги осуществляются любым удобным для
+					Вас способом: авиа, авто.Доставляем из России, Турции, США, Кореи, Китая, Малайзии и Японии по всему Узбекистану
+				</p>
+
+				<div class="about__desc">
+					<svg width="21" height="21">
+						<use xlink:href="#success"></use>
+					</svg>
+					<p>Система оповещения</p>
 				</div>
 
-			</nav>
+				<div class="about__desc">
+					<svg width="21" height="21">
+						<use xlink:href="#success"></use>
+					</svg>
+					<p>Пунктуальность</p>
+				</div>
 
-		</header>
-	</div>
+				<div class="about__desc">
+					<svg width="21" height="21">
+						<use xlink:href="#success"></use>
+					</svg>
+					<p>Безопасность</p>
+				</div>
 
-	<div class="links-container swiper-container">
-		<div class="page-links swiper-wrapper">
-			<a class="swiper-slide active" href="./about.html">О нас</a>
-			<a class="swiper-slide" href="./index.html">Главная</a>
-			<a class="swiper-slide" href="./servises.html">Услуги</a>
-			<a class="swiper-slide" href="./tarifs.html">Тарифы</a>
-			<a class="swiper-slide" href="#">Условия</a>
-			<a class="swiper-slide" href="#">Интернет магазины</a>
-			<a class="swiper-slide" href="#">FAQ</a>
-			<a class="swiper-slide" href="#">Сотрудники</a>
+				<div class="about__desc">
+					<svg width="21" height="21">
+						<use xlink:href="#success"></use>
+					</svg>
+					<p>Отличный сервис</p>
+				</div>
+
+				<div class="about__desc">
+					<svg width="21" height="21">
+						<use xlink:href="#success"></use>
+					</svg>
+					<p>Таможенно правовое сопровождение</p>
+				</div>
+			</section>
+
+			<section class="partners">
+				<h3>Партнеры</h3>
+
+				<div class="partners-wrapper">
+					<a href="#">
+						<picture>
+							<source srcset="./images/partners1.avif">
+							<img src="./images/partners1.jpg" alt="наши портнеры" width="137" height="67">
+						</picture>
+					</a>
+					<a href="#">
+						<picture>
+							<source srcset="./images/partners2.avif">
+							<img src="./images/partners2.jpg" alt="наши портнеры" width="140" height="70">
+						</picture>
+					</a>
+					<a href="#">
+						<picture>
+							<source srcset="./images/partners3.avif">
+							<img src="./images/partners3.jpg" alt="наши портнеры" width="137" height="67">
+						</picture>
+					</a>
+					<a href="#">
+						<picture>
+							<source srcset="./images/partners4.avif">
+							<img src="./images/partners4.jpg" alt="наши портнеры" width="140" height="70">
+						</picture>
+					</a>
+				</div>
+			</section>
 		</div>
-	</div>
 
-	<div class="container">
-
-		<div class="about-image">
-			<picture>
-				<source srcset="./images/advert2.avif">
-				<img src="./images/advert2.jpg" alt="О нас" width="400" height="318">
-			</picture>
-		</div>
-
-		<section class="about">
-
-			<h1>О компании</h1>
-
-			<p><span>YUMECS —</span> доставка посылок грузов и интернет заказов легко
-				и удобно. Услуги осуществляются любым удобным для Вас способом: авиа, авто.Доставляем из России, Турции,
-				США, Кореи, Китая, Малайзии и Японии по всему Узбекистану
-			</p>
-
-			<div class="about__desc">
-				<svg width="21" height="21">
-					<use xlink:href="#success"></use>
-				</svg>
-				<p>Система оповещения</p>
-			</div>
-
-			<div class="about__desc">
-				<svg width="21" height="21">
-					<use xlink:href="#success"></use>
-				</svg>
-				<p>Пунктуальность</p>
-			</div>
-
-			<div class="about__desc">
-				<svg width="21" height="21">
-					<use xlink:href="#success"></use>
-				</svg>
-				<p>Безопасность</p>
-			</div>
-
-			<div class="about__desc">
-				<svg width="21" height="21">
-					<use xlink:href="#success"></use>
-				</svg>
-				<p>Отличный сервис</p>
-			</div>
-
-			<div class="about__desc">
-				<svg width="21" height="21">
-					<use xlink:href="#success"></use>
-				</svg>
-				<p>Таможенно правовое сопровождение</p>
-			</div>
-
-		</section>
-
-		<section class="partners">
-
-			<h3>Партнеры</h3>
-
-			<div class="partners-wrapper">
-				<a href="#">
-					<picture>
-						<source srcset="./images/partners1.avif">
-						<img src="./images/partners1.jpg" alt="наши портнеры" width="137" height="67">
-					</picture>
-				</a>
-				<a href="#">
-					<picture>
-						<source srcset="./images/partners2.avif">
-						<img src="./images/partners2.jpg" alt="наши портнеры" width="140" height="70">
-					</picture>
-				</a>
-				<a href="#">
-					<picture>
-						<source srcset="./images/partners3.avif">
-						<img src="./images/partners3.jpg" alt="наши портнеры" width="137" height="67">
-					</picture>
-				</a>
-				<a href="#">
-					<picture>
-						<source srcset="./images/partners4.avif">
-						<img src="./images/partners4.jpg" alt="наши портнеры" width="140" height="70">
-					</picture>
-				</a>
-			</div>
-		</section>
-
-	</div>
-
-	<script type="module" src="./js/main.min.js"></script>
-</body>
-
+		<script type="module" src="./js/main.min.js"></script>
+	</body>
 </html>
