--- a/servises.html
+++ b/servises.html
@@ -77,7 +77,7 @@
 				<a class="swiper-slide" href="./about.html">О нас</a>
 				<a class="swiper-slide" href="./tarifs.html">Тарифы</a>
 				<a class="swiper-slide" href="#">Условия</a>
-				<a class="swiper-slide" href="#">Интернет магазины</a>
+				<a class="swiper-slide" href="./shop.html">Интернет магазины</a>
 				<a class="swiper-slide" href="#">FAQ</a>
 				<a class="swiper-slide" href="#">Сотрудники</a>
 			</div>
