--- a/shop.html
+++ b/shop.html
@@ -76,54 +76,129 @@
 
 		<div class="links-container swiper-container">
 			<div class="page-links swiper-wrapper">
+				<a class="swiper-slide active" href="./shop.html">Интернет магазины</a>
 				<a class="swiper-slide" href="./tarifs.html">Тарифы</a>
-				<a class="swiper-slide active" href="./about.html">О нас</a>
-				<a class="swiper-slide" href="./index.html">Главная</a>
 				<a class="swiper-slide" href="./servises.html">Услуги</a>
+				<a class="swiper-slide" href="./about.html">О нас</a>
+				<a class="swiper-slide" href="./index.html">Главная</a>
 				<a class="swiper-slide" href="#">Условия</a>
-				<a class="swiper-slide" href="./shop.html">Интернет магазины</a>
 				<a class="swiper-slide" href="#">FAQ</a>
 				<a class="swiper-slide" href="#">Сотрудники</a>
 			</div>
 		</div>
 
 		<div class="container">
-			<section class="tarifs-inner">
-				<div class="tarifs-inner-item">
-					<h3>Авто</h3>
-					<div class="tarifs-inner-card">
-						<div class="tarifs-inner-head">
-							<b>от $6</b>
-							<span>/ за кг</span>
-						</div>
-						<p>От офиса до офиса</p>
-						<p>Минимально оплачиваемый вес – 5кг</p>
-						<p>Сроки доставки — от 10 рабочих дней</p>
-						<p>Не считая дня прибытия на склад</p>
-
-						<b>
-							Авто перевозки: Книги, Б/у вещи личного характера. Тариф может меняться от вида груза для уточнения написать
-							менеджеру
-						</b>
-
-						<a href="#">Свяжитесь с менеджером</a>
-					</div>
-				</div>
-				<div class="tarifs-inner-item">
-					<h3>Базовый</h3>
-					<div class="tarifs-inner-card">
-						<div class="tarifs-inner-head">
-							<b>$7</b>
-							<span>/ за кг</span>
-						</div>
-						<p>Минимальный оплачиваемый вес – 2кг</p>
-						<p>Сроки доставки — от 5 рабочих дней</p>
-						<p>Не считая дня прибытия на склад</p>
-
-						<b>Этот тариф для Интернет заказов Связаться с менеджером </b>
-
-						<a href="#">Свяжитесь с менеджером</a>
-					</div>
+			<section class="shop">
+				<h1>Бренды</h1>
+				<div class="shop-content">
+					<a href="#" class="shop-link">
+						<picture>
+							<source srcset="./images/shop1.avif">
+							<img src="./images/shop1.png" alt="shop" width="100" height="100">
+						</picture>
+					</a>
+					<a href="#" class="shop-link">
+						<picture>
+							<source srcset="./images/shop2.avif">
+							<img src="./images/shop2.png" alt="shop" width="100" height="100">
+						</picture>
+					</a>
+					<a href="#" class="shop-link">
+						<picture>
+							<source srcset="./images/shop3.avif">
+							<img src="./images/shop3.png" alt="shop" width="100" height="100">
+						</picture>
+					</a>
+					<a href="#" class="shop-link">
+						<picture>
+							<source srcset="./images/shop4.avif">
+							<img src="./images/shop4.png" alt="shop" width="100" height="100">
+						</picture>
+					</a>
+					<a href="#" class="shop-link">
+						<picture>
+							<source srcset="./images/shop5.avif">
+							<img src="./images/shop5.png" alt="shop" width="100" height="100">
+						</picture>
+					</a>
+					<a href="#" class="shop-link">
+						<picture>
+							<source srcset="./images/shop6.avif">
+							<img src="./images/shop6.png" alt="shop" width="100" height="100">
+						</picture>
+					</a>
+					<a href="#" class="shop-link">
+						<picture>
+							<source srcset="./images/shop7.avif">
+							<img src="./images/shop7.png" alt="shop" width="100" height="100">
+						</picture>
+					</a>
+					<a href="#" class="shop-link">
+						<picture>
+							<source srcset="./images/shop8.avif">
+							<img src="./images/shop8.png" alt="shop" width="100" height="100">
+						</picture>
+					</a>
+					<a href="#" class="shop-link">
+						<picture>
+							<source srcset="./images/shop9.avif">
+							<img src="./images/shop9.png" alt="shop" width="100" height="100">
+						</picture>
+					</a>
+					<a href="#" class="shop-link">
+						<picture>
+							<source srcset="./images/shop1.avif">
+							<img src="./images/shop1.png" alt="shop" width="100" height="100">
+						</picture>
+					</a>
+					<a href="#" class="shop-link">
+						<picture>
+							<source srcset="./images/shop2.avif">
+							<img src="./images/shop2.png" alt="shop" width="100" height="100">
+						</picture>
+					</a>
+					<a href="#" class="shop-link">
+						<picture>
+							<source srcset="./images/shop3.avif">
+							<img src="./images/shop3.png" alt="shop" width="100" height="100">
+						</picture>
+					</a>
+					<a href="#" class="shop-link">
+						<picture>
+							<source srcset="./images/shop4.avif">
+							<img src="./images/shop4.png" alt="shop" width="100" height="100">
+						</picture>
+					</a>
+					<a href="#" class="shop-link">
+						<picture>
+							<source srcset="./images/shop5.avif">
+							<img src="./images/shop5.png" alt="shop" width="100" height="100">
+						</picture>
+					</a>
+					<a href="#" class="shop-link">
+						<picture>
+							<source srcset="./images/shop6.avif">
+							<img src="./images/shop6.png" alt="shop" width="100" height="100">
+						</picture>
+					</a>
+					<a href="#" class="shop-link">
+						<picture>
+							<source srcset="./images/shop7.avif">
+							<img src="./images/shop7.png" alt="shop" width="100" height="100">
+						</picture>
+					</a>
+					<a href="#" class="shop-link">
+						<picture>
+							<source srcset="./images/shop8.avif">
+							<img src="./images/shop8.png" alt="shop" width="100" height="100">
+						</picture>
+					</a>
+					<a href="#" class="shop-link">
+						<picture>
+							<source srcset="./images/shop9.avif">
+							<img src="./images/shop9.png" alt="shop" width="100" height="100">
+						</picture>
+					</a>
 				</div>
 			</section>
 		</div>
