feat: add page FAQ

--- a/src/html/pages/servises.html
+++ b/src/html/pages/servises.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
-	@@include('../components/head.html', { 'title': 'Главная' }) @@include('../components/sprite.html')
+	@@include('../components/head.html', { 'title': 'Услуги' }) @@include('../components/sprite.html')
 
 	<body>
 		<div class="container">
@@ -36,7 +36,7 @@
 				<a class="swiper-slide" href="./tarifs.html">Тарифы</a>
 				<a class="swiper-slide" href="#">Условия</a>
 				<a class="swiper-slide" href="./shop.html">Интернет магазины</a>
-				<a class="swiper-slide" href="#">FAQ</a>
+				<a class="swiper-slide" href="./faq.html">FAQ</a>
 				<a class="swiper-slide" href="#">Сотрудники</a>
 			</div>
 		</div>
