--- a/src/html/pages/about.html
+++ b/src/html/pages/about.html
@@ -40,7 +40,7 @@
 				<a class="swiper-slide" href="./tarifs.html">Тарифы</a>
 				<a class="swiper-slide" href="#">Условия</a>
 				<a class="swiper-slide" href="./shop.html">Интернет магазины</a>
-				<a class="swiper-slide" href="#">FAQ</a>
+				<a class="swiper-slide" href="./faq.html">FAQ</a>
 				<a class="swiper-slide" href="#">Сотрудники</a>
 			</div>
 		</div>
