--- a/src/html/pages/tarifs-inner.html
+++ b/src/html/pages/tarifs-inner.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		@@include('../components/head.html', { 'title': 'О нас' }) @@include('../components/sprite.html')
+		@@include('../components/head.html', { 'title': 'Тарифы' }) @@include('../components/sprite.html')
 	</head>
 
 	<body>
@@ -40,7 +40,7 @@
 				<a class="swiper-slide" href="./servises.html">Услуги</a>
 				<a class="swiper-slide" href="#">Условия</a>
 				<a class="swiper-slide" href="./shop.html">Интернет магазины</a>
-				<a class="swiper-slide" href="#">FAQ</a>
+				<a class="swiper-slide" href="./faq.html">FAQ</a>
 				<a class="swiper-slide" href="#">Сотрудники</a>
 			</div>
 		</div>
