--- a/faq.html
+++ b/faq.html
@@ -24,7 +24,7 @@
 	<meta name="theme-color" content="#0a0428">
 	<meta name="format-detection" content="telephone=no, date=no, address=no, email=no">
 
-	<title>О нас</title>
+	<title>FAQ</title>
 
 	<link rel="preload" href="./fonts/Poppins-Medium.woff" as="font" type="font/woff" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-Regular.woff" as="font" type="font/woff" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-SemiBold.woff" as="font" type="font/woff" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-SemiBold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 
@@ -76,97 +76,87 @@
 
 		<div class="links-container swiper-container">
 			<div class="page-links swiper-wrapper">
+				<a class="swiper-slide" href="./faq.html">FAQ</a>
+				<a class="swiper-slide" href="./tarifs.html">Тарифы</a>
+				<a class="swiper-slide" href="./servises.html">Услуги</a>
 				<a class="swiper-slide active" href="./about.html">О нас</a>
 				<a class="swiper-slide" href="./index.html">Главная</a>
-				<a class="swiper-slide" href="./servises.html">Услуги</a>
-				<a class="swiper-slide" href="./tarifs.html">Тарифы</a>
 				<a class="swiper-slide" href="#">Условия</a>
 				<a class="swiper-slide" href="./shop.html">Интернет магазины</a>
-				<a class="swiper-slide" href="./faq.html">FAQ</a>
 				<a class="swiper-slide" href="#">Сотрудники</a>
 			</div>
 		</div>
 
 		<div class="container">
-			<div class="about-image">
-				<picture>
-					<source srcset="./images/advert2.avif">
-					<img src="./images/advert2.jpg" alt="О нас" width="400" height="318">
-				</picture>
-			</div>
-
-			<section class="about">
-				<h1>О компании</h1>
-
-				<p>
-					<span>YUMECS —</span> доставка посылок грузов и интернет заказов легко и удобно. Услуги осуществляются любым удобным для
-					Вас способом: авиа, авто.Доставляем из России, Турции, США, Кореи, Китая, Малайзии и Японии по всему Узбекистану
-				</p>
-
-				<div class="about__desc">
-					<svg width="21" height="21">
-						<use xlink:href="#success"></use>
+			<section class="faq servises" data-accordion>
+				<div class="faq-accordeon servises-accordeon" data-accordion-header>
+					<h3>Вопрос</h3>
+					<svg width="17" height="9">
+						<use xlink:href="#accordeon"></use>
 					</svg>
-					<p>Система оповещения</p>
 				</div>
 
-				<div class="about__desc">
-					<svg width="21" height="21">
-						<use xlink:href="#success"></use>
-					</svg>
-					<p>Пунктуальность</p>
-				</div>
-
-				<div class="about__desc">
-					<svg width="21" height="21">
-						<use xlink:href="#success"></use>
-					</svg>
-					<p>Безопасность</p>
-				</div>
-
-				<div class="about__desc">
-					<svg width="21" height="21">
-						<use xlink:href="#success"></use>
-					</svg>
-					<p>Отличный сервис</p>
-				</div>
-
-				<div class="about__desc">
-					<svg width="21" height="21">
-						<use xlink:href="#success"></use>
-					</svg>
-					<p>Таможенно правовое сопровождение</p>
+				<div class="faq-wrapper servises-wrapper" data-accordion-content>
+					<p>
+						Перевозчик «ЮМЭКС» – общество с ограниченной ответственностью «ЮМЭКС», юридический адрес: 117105, г. Москва,
+						Варшавское шоссе 5, основной государственный регистрационный номер 1217700146652, осуществляющее деятельность по
+						международной перевозке грузов, а также третьи лица, в том числе таможенные представители, связанные с перевозчиком
+						«ЮМЭКС» договорными отношениями по перевозке и таможенному оформлению грузов;
+					</p>
 				</div>
 			</section>
 
-			<section class="partners">
-				<h3>Партнеры</h3>
+			<section class="faq servises" data-accordion>
+				<div class="faq-accordeon servises-accordeon" data-accordion-header>
+					<h3>Вопрос</h3>
+					<svg width="17" height="9">
+						<use xlink:href="#accordeon"></use>
+					</svg>
+				</div>
 
-				<div class="partners-wrapper">
-					<a href="#">
-						<picture>
-							<source srcset="./images/partners1.avif">
-							<img src="./images/partners1.jpg" alt="наши портнеры" width="137" height="67">
-						</picture>
-					</a>
-					<a href="#">
-						<picture>
-							<source srcset="./images/partners2.avif">
-							<img src="./images/partners2.jpg" alt="наши портнеры" width="140" height="70">
-						</picture>
-					</a>
-					<a href="#">
-						<picture>
-							<source srcset="./images/partners3.avif">
-							<img src="./images/partners3.jpg" alt="наши портнеры" width="137" height="67">
-						</picture>
-					</a>
-					<a href="#">
-						<picture>
-							<source srcset="./images/partners4.avif">
-							<img src="./images/partners4.jpg" alt="наши портнеры" width="140" height="70">
-						</picture>
-					</a>
+				<div class="faq-wrapper servises-wrapper" data-accordion-content>
+					<p>
+						Перевозчик «ЮМЭКС» – общество с ограниченной ответственностью «ЮМЭКС», юридический адрес: 117105, г. Москва,
+						Варшавское шоссе 5, основной государственный регистрационный номер 1217700146652, осуществляющее деятельность по
+						международной перевозке грузов, а также третьи лица, в том числе таможенные представители, связанные с перевозчиком
+						«ЮМЭКС» договорными отношениями по перевозке и таможенному оформлению грузов;
+					</p>
+				</div>
+			</section>
+
+			<section class="faq servises" data-accordion>
+				<div class="faq-accordeon servises-accordeon" data-accordion-header>
+					<h3>Вопрос</h3>
+					<svg width="17" height="9">
+						<use xlink:href="#accordeon"></use>
+					</svg>
+				</div>
+
+				<div class="faq-wrapper servises-wrapper" data-accordion-content>
+					<p>
+						Перевозчик «ЮМЭКС» – общество с ограниченной ответственностью «ЮМЭКС», юридический адрес: 117105, г. Москва,
+						Варшавское шоссе 5, основной государственный регистрационный номер 1217700146652, осуществляющее деятельность по
+						международной перевозке грузов, а также третьи лица, в том числе таможенные представители, связанные с перевозчиком
+						«ЮМЭКС» договорными отношениями по перевозке и таможенному оформлению грузов;
+					</p>
+				</div>
+			</section>
+
+			<section class="faq servises" data-accordion>
+				<div class="faq-accordeon servises-accordeon" data-accordion-header>
+					<h3>Вопрос</h3>
+					<svg width="17" height="9">
+						<use xlink:href="#accordeon"></use>
+					</svg>
+				</div>
+
+				<div class="faq-wrapper servises-wrapper" data-accordion-content>
+					<p>
+						Перевозчик «ЮМЭКС» – общество с ограниченной ответственностью «ЮМЭКС», юридический адрес: 117105, г. Москва,
+						Варшавское шоссе 5, основной государственный регистрационный номер 1217700146652, осуществляющее деятельность по
+						международной перевозке грузов, а также третьи лица, в том числе таможенные представители, связанные с перевозчиком
+						«ЮМЭКС» договорными отношениями по перевозке и таможенному оформлению грузов;
+					</p>
 				</div>
 			</section>
 		</div>
