--- a/servises.html
+++ b/servises.html
@@ -21,7 +21,7 @@
 	<meta name="theme-color" content="#0a0428">
 	<meta name="format-detection" content="telephone=no, date=no, address=no, email=no">
 
-	<title>Главная</title>
+	<title>Услуги</title>
 
 	<link rel="preload" href="./fonts/Poppins-Medium.woff" as="font" type="font/woff" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-Regular.woff" as="font" type="font/woff" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-SemiBold.woff" as="font" type="font/woff" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-SemiBold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 
@@ -78,7 +78,7 @@
 				<a class="swiper-slide" href="./tarifs.html">Тарифы</a>
 				<a class="swiper-slide" href="#">Условия</a>
 				<a class="swiper-slide" href="./shop.html">Интернет магазины</a>
-				<a class="swiper-slide" href="#">FAQ</a>
+				<a class="swiper-slide" href="./faq.html">FAQ</a>
 				<a class="swiper-slide" href="#">Сотрудники</a>
 			</div>
 		</div>
