--- a/tarifs-inner.html
+++ b/tarifs-inner.html
@@ -24,7 +24,7 @@
 	<meta name="theme-color" content="#0a0428">
 	<meta name="format-detection" content="telephone=no, date=no, address=no, email=no">
 
-	<title>О нас</title>
+	<title>Тарифы</title>
 
 	<link rel="preload" href="./fonts/Poppins-Medium.woff" as="font" type="font/woff" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-Regular.woff" as="font" type="font/woff" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-SemiBold.woff" as="font" type="font/woff" crossorigin="anonymous"><link rel="preload" href="./fonts/Poppins-SemiBold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 
@@ -82,7 +82,7 @@
 				<a class="swiper-slide" href="./servises.html">Услуги</a>
 				<a class="swiper-slide" href="#">Условия</a>
 				<a class="swiper-slide" href="./shop.html">Интернет магазины</a>
-				<a class="swiper-slide" href="#">FAQ</a>
+				<a class="swiper-slide" href="./faq.html">FAQ</a>
 				<a class="swiper-slide" href="#">Сотрудники</a>
 			</div>
 		</div>
