--- a/tarifs.html
+++ b/tarifs.html
@@ -83,7 +83,7 @@
 			<a class="swiper-slide" href="./servises.html">Услуги</a>
 			<a class="swiper-slide" href="#">Условия</a>
 			<a class="swiper-slide" href="./shop.html">Интернет магазины</a>
-			<a class="swiper-slide" href="#">FAQ</a>
+			<a class="swiper-slide" href="./faq.html">FAQ</a>
 			<a class="swiper-slide" href="#">Сотрудники</a>
 		</div>
 	</div>
