feat: add page employees

--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -15,7 +15,7 @@
 			<a class="swiper-slide" href="#">Условия</a>
 			<a class="swiper-slide" href="./shop.html">Интернет магазины</a>
 			<a class="swiper-slide" href="./faq.html">FAQ</a>
-			<a class="swiper-slide" href="#">Сотрудники</a>
+			<a class="swiper-slide" href="./employees.html">Сотрудники</a>
 		</div>
 	</div>
 
