--- a/src/html/pages/faq.html
+++ b/src/html/pages/faq.html
@@ -41,7 +41,7 @@
 				<a class="swiper-slide" href="./index.html">Главная</a>
 				<a class="swiper-slide" href="#">Условия</a>
 				<a class="swiper-slide" href="./shop.html">Интернет магазины</a>
-				<a class="swiper-slide" href="#">Сотрудники</a>
+				<a class="swiper-slide" href="./about.html">Сотрудники</a>
 			</div>
 		</div>
 
