--- a/src/html/pages/shop.html
+++ b/src/html/pages/shop.html
@@ -41,7 +41,7 @@
 				<a class="swiper-slide" href="./index.html">Главная</a>
 				<a class="swiper-slide" href="#">Условия</a>
 				<a class="swiper-slide" href="./faq.html">FAQ</a>
-				<a class="swiper-slide" href="#">Сотрудники</a>
+				<a class="swiper-slide" href="./employees.html">Сотрудники</a>
 			</div>
 		</div>
 
