--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -12,13 +12,44 @@
 			<a class="swiper-slide" href="./about.html">О нас</a>
 			<a class="swiper-slide" href="./servises.html">Услуги</a>
 			<a class="swiper-slide" href="./tarifs.html">Тарифы</a>
-			<a class="swiper-slide" href="#">Условия</a>
+
+			<details class="nav-link-dropdown swiper-slide">
+				<summary class="nav-dropdown">
+					Условия
+					<svg width="17" height="9">
+						<use xlink:href="#accordeon"></use>
+					</svg>
+				</summary>
+
+			</details>
+
 			<a class="swiper-slide" href="./shop.html">Интернет магазины</a>
 			<a class="swiper-slide" href="./faq.html">FAQ</a>
 			<a class="swiper-slide" href="./employees.html">Сотрудники</a>
 		</div>
 	</div>
 
+	<div class="dropdown-menu">
+
+		<ul class="dropdown">
+			<li class="dropdown-item">
+				<a href="./not-accepted.html" class="nav-link">Не принимаются</a>
+			</li>
+			<li class="dropdown-item">
+				<a href="./delivery.html" class="nav-link">Условия доставки</a>
+			</li>
+			<li class="dropdown-item">
+				<a href="./dangerous-goods.html" class="nav-link">Опасные грузы</a>
+			</li>
+			<li class="dropdown-item">
+				<a href="./duty.html" class="nav-link">Товары подлежащие вывозной пошлине </a>
+			</li>
+			<li class="dropdown-item">
+				<a href="./offer.html" class="nav-link">Оферта</a>
+			</li>
+		</ul>
+
+	</div>
 
 	<div class="container">
 
