--- a/src/html/pages/employees.html
+++ b/src/html/pages/employees.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	@@include('../components/head.html', { 'title': 'О нас' }) @@include('../components/sprite.html')
+	@@include('../components/head.html', { 'title': 'Сотрудники' }) @@include('../components/sprite.html')
 </head>
 
 <body>
@@ -39,11 +39,42 @@
 			<a class="swiper-slide" href="./servises.html">Услуги</a>
 			<a class="swiper-slide" href="./about.html">О нас</a>
 			<a class="swiper-slide" href="./index.html">Главная</a>
-			<a class="swiper-slide" href="#">Условия</a>
+			<details class="nav-link-dropdown swiper-slide">
+				<summary class="nav-dropdown">
+					Условия
+					<svg width="17" height="9">
+						<use xlink:href="#accordeon"></use>
+					</svg>
+				</summary>
+
+			</details>
 			<a class="swiper-slide" href="./shop.html">Интернет магазины</a>
 			<a class="swiper-slide" href="./faq.html">FAQ</a>
 		</div>
 	</div>
+
+	<div class="dropdown-menu">
+
+		<ul class="dropdown">
+			<li class="dropdown-item">
+				<a href="./not-accepted.html" class="nav-link">Не принимаются</a>
+			</li>
+			<li class="dropdown-item">
+				<a href="./delivery.html" class="nav-link">Условия доставки</a>
+			</li>
+			<li class="dropdown-item">
+				<a href="./dangerous-goods.html" class="nav-link">Опасные грузы</a>
+			</li>
+			<li class="dropdown-item">
+				<a href="./duty.html" class="nav-link">Товары подлежащие вывозной пошлине </a>
+			</li>
+			<li class="dropdown-item">
+				<a href="./offer.html" class="nav-link">Оферта</a>
+			</li>
+		</ul>
+
+	</div>
+
 
 	<div class="container">
 
