--- a/src/html/pages/shop.html
+++ b/src/html/pages/shop.html
@@ -1,166 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		@@include('../components/head.html', { 'title': 'Интернет Магазины' }) @@include('../components/sprite.html')
-	</head>
 
-	<body>
-		<div class="container">
-			<header>
-				<nav class="about-nav">
-					<button id="go-back" class="nav-back">
-						<svg width="24" height="20">
-							<use xlink:href="#arrow-left"></use>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	@@include('../components/head.html', { 'title': 'Интернет Магазины' }) @@include('../components/sprite.html')
+</head>
+
+<body>
+	<div class="container">
+		<header>
+			<nav class="about-nav">
+				<button id="go-back" class="nav-back">
+					<svg width="24" height="20">
+						<use xlink:href="#arrow-left"></use>
+					</svg>
+				</button>
+
+				<div class="nav__links">
+					<a href="tel:+998555031199" class="nav__phone">
+						<svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path
+								d="M12.5559 10.906L12.1009 11.359C12.1009 11.359 11.0179 12.435 8.06288 9.49698C5.10788 6.55898 6.19088 5.48298 6.19088 5.48298L6.47688 5.19698C7.18388 4.49498 7.25088 3.36698 6.63388 2.54298L5.37388 0.859979C4.60988 -0.160021 3.13488 -0.29502 2.25988 0.57498L0.68988 2.13498C0.25688 2.56698 -0.0331206 3.12498 0.00187944 3.74498C0.0918794 5.33198 0.809879 8.74498 4.81388 12.727C9.06088 16.949 13.0459 17.117 14.6749 16.965C15.1909 16.917 15.6389 16.655 15.9999 16.295L17.4199 14.883C18.3799 13.93 18.1099 12.295 16.8819 11.628L14.9719 10.589C14.1659 10.152 13.1859 10.28 12.5559 10.906Z"
+								fill="#3B88FB" />
 						</svg>
-					</button>
+					</a>
 
-					<div class="nav__links">
-						<a href="tel:+998555031199" class="nav__phone">
-							<svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-								<path
-									d="M12.5559 10.906L12.1009 11.359C12.1009 11.359 11.0179 12.435 8.06288 9.49698C5.10788 6.55898 6.19088 5.48298 6.19088 5.48298L6.47688 5.19698C7.18388 4.49498 7.25088 3.36698 6.63388 2.54298L5.37388 0.859979C4.60988 -0.160021 3.13488 -0.29502 2.25988 0.57498L0.68988 2.13498C0.25688 2.56698 -0.0331206 3.12498 0.00187944 3.74498C0.0918794 5.33198 0.809879 8.74498 4.81388 12.727C9.06088 16.949 13.0459 17.117 14.6749 16.965C15.1909 16.917 15.6389 16.655 15.9999 16.295L17.4199 14.883C18.3799 13.93 18.1099 12.295 16.8819 11.628L14.9719 10.589C14.1659 10.152 13.1859 10.28 12.5559 10.906Z"
-									fill="#3B88FB"
-								/>
-							</svg>
-						</a>
-
-						<a href="#" class="nav__bot">@yumecs</a>
-					</div>
-				</nav>
-			</header>
-		</div>
-
-		<div class="swiper-container links-container">
-			<div class="page-links swiper-wrapper">
-				<a class="swiper-slide active" href="./shop.html">Интернет магазины</a>
-				<a class="swiper-slide" href="./tarifs.html">Тарифы</a>
-				<a class="swiper-slide" href="./servises.html">Услуги</a>
-				<a class="swiper-slide" href="./about.html">О нас</a>
-				<a class="swiper-slide" href="./index.html">Главная</a>
-				<a class="swiper-slide" href="#">Условия</a>
-				<a class="swiper-slide" href="./faq.html">FAQ</a>
-				<a class="swiper-slide" href="./employees.html">Сотрудники</a>
-			</div>
-		</div>
-
-		<div class="container">
-			<section class="shop">
-				<h1>Бренды</h1>
-				<div class="shop-content">
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop1.avif" />
-							<img src="./images/shop1.png" alt="shop" width="100" height="100" />
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop2.avif" />
-							<img src="./images/shop2.png" alt="shop" width="100" height="100" />
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop3.avif" />
-							<img src="./images/shop3.png" alt="shop" width="100" height="100" />
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop4.avif" />
-							<img src="./images/shop4.png" alt="shop" width="100" height="100" />
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop5.avif" />
-							<img src="./images/shop5.png" alt="shop" width="100" height="100" />
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop6.avif" />
-							<img src="./images/shop6.png" alt="shop" width="100" height="100" />
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop7.avif" />
-							<img src="./images/shop7.png" alt="shop" width="100" height="100" />
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop8.avif" />
-							<img src="./images/shop8.png" alt="shop" width="100" height="100" />
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop9.avif" />
-							<img src="./images/shop9.png" alt="shop" width="100" height="100" />
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop1.avif" />
-							<img src="./images/shop1.png" alt="shop" width="100" height="100" />
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop2.avif" />
-							<img src="./images/shop2.png" alt="shop" width="100" height="100" />
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop3.avif" />
-							<img src="./images/shop3.png" alt="shop" width="100" height="100" />
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop4.avif" />
-							<img src="./images/shop4.png" alt="shop" width="100" height="100" />
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop5.avif" />
-							<img src="./images/shop5.png" alt="shop" width="100" height="100" />
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop6.avif" />
-							<img src="./images/shop6.png" alt="shop" width="100" height="100" />
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop7.avif" />
-							<img src="./images/shop7.png" alt="shop" width="100" height="100" />
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop8.avif" />
-							<img src="./images/shop8.png" alt="shop" width="100" height="100" />
-						</picture>
-					</a>
-					<a href="#" class="shop-link">
-						<picture>
-							<source srcset="./images/shop9.avif" />
-							<img src="./images/shop9.png" alt="shop" width="100" height="100" />
-						</picture>
-					</a>
+					<a href="#" class="nav__bot">@yumecs</a>
 				</div>
-			</section>
-		</div>
+			</nav>
+		</header>
+	</div>
 
-		<script type="module" src="./js/main.min.js"></script>
-	</body>
+	<div class="swiper-container links-container">
+		<div class="page-links swiper-wrapper">
+			<a class="swiper-slide active" href="./shop.html">Интернет магазины</a>
+			<a class="swiper-slide" href="./tarifs.html">Тарифы</a>
+			<a class="swiper-slide" href="./servises.html">Услуги</a>
+			<a class="swiper-slide" href="./about.html">О нас</a>
+			<a class="swiper-slide" href="./index.html">Главная</a>
+			<details class="nav-link-dropdown swiper-slide">
+				<summary class="nav-dropdown">
+					Условия
+					<svg width="17" height="9">
+						<use xlink:href="#accordeon"></use>
+					</svg>
+				</summary>
+			</details>
+
+			<a class="swiper-slide" href="./faq.html">FAQ</a>
+			<a class="swiper-slide" href="./employees.html">Сотрудники</a>
+		</div>
+	</div>
+
+	<div class="dropdown-menu">
+
+		<ul class="dropdown">
+			<li class="dropdown-item">
+				<a href="./not-accepted.html" class="nav-link">Не принимаются</a>
+			</li>
+			<li class="dropdown-item">
+				<a href="./delivery.html" class="nav-link">Условия доставки</a>
+			</li>
+			<li class="dropdown-item">
+				<a href="./dangerous-goods.html" class="nav-link">Опасные грузы</a>
+			</li>
+			<li class="dropdown-item">
+				<a href="./duty.html" class="nav-link">Товары подлежащие вывозной пошлине </a>
+			</li>
+			<li class="dropdown-item">
+				<a href="./offer.html" class="nav-link">Оферта</a>
+			</li>
+		</ul>
+
+	</div>
+
+	<div class="container">
+		<section class="shop">
+			<h1>Бренды</h1>
+			<div class="shop-content">
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop1.avif" />
+						<img src="./images/shop1.png" alt="shop" width="100" height="100" />
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop2.avif" />
+						<img src="./images/shop2.png" alt="shop" width="100" height="100" />
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop3.avif" />
+						<img src="./images/shop3.png" alt="shop" width="100" height="100" />
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop4.avif" />
+						<img src="./images/shop4.png" alt="shop" width="100" height="100" />
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop5.avif" />
+						<img src="./images/shop5.png" alt="shop" width="100" height="100" />
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop6.avif" />
+						<img src="./images/shop6.png" alt="shop" width="100" height="100" />
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop7.avif" />
+						<img src="./images/shop7.png" alt="shop" width="100" height="100" />
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop8.avif" />
+						<img src="./images/shop8.png" alt="shop" width="100" height="100" />
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop9.avif" />
+						<img src="./images/shop9.png" alt="shop" width="100" height="100" />
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop1.avif" />
+						<img src="./images/shop1.png" alt="shop" width="100" height="100" />
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop2.avif" />
+						<img src="./images/shop2.png" alt="shop" width="100" height="100" />
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop3.avif" />
+						<img src="./images/shop3.png" alt="shop" width="100" height="100" />
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop4.avif" />
+						<img src="./images/shop4.png" alt="shop" width="100" height="100" />
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop5.avif" />
+						<img src="./images/shop5.png" alt="shop" width="100" height="100" />
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop6.avif" />
+						<img src="./images/shop6.png" alt="shop" width="100" height="100" />
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop7.avif" />
+						<img src="./images/shop7.png" alt="shop" width="100" height="100" />
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop8.avif" />
+						<img src="./images/shop8.png" alt="shop" width="100" height="100" />
+					</picture>
+				</a>
+				<a href="#" class="shop-link">
+					<picture>
+						<source srcset="./images/shop9.avif" />
+						<img src="./images/shop9.png" alt="shop" width="100" height="100" />
+					</picture>
+				</a>
+			</div>
+		</section>
+	</div>
+
+	<script type="module" src="./js/main.min.js"></script>
+</body>
+
 </html>
